# Artuga

./: CMakeLists.txt  README.md  Untitled Diagram.drawio  client  client.c  package.xml  rosnode_artuga.cpp
src/: rosnode_artuga.cpp  rosnode_artuga.cpp.autosave  server  serverTempControl.c
src/artugaMarker/: artugaMarker.cpp  artugaMarker.h
src/camera/: camera.cpp  camera.h
src/lidar/: lidar.h
