<?xml version="1.0"?>
<package format="2">
    <name>artuga</name>
    <version>0.1.0</version>
    <description>This package contains all the development of artuga</description>


    <maintainer email="diogoa.brandao5@gmail.com">diogo</maintainer>


    <license>Apache 2.0</license>



    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>image_transport</build_depend>
    <build_depend>cv_bridge</build_depend>

    <depend>mavros_msgs</depend>
    <depend>mavros</depend>
    <exec_depend>image_transport</exec_depend>
    <exec_depend>cv_bridge</exec_depend>
    <exec_depend>roscpp</exec_depend>
    <exec_depend>rospy</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>


    <build_depend>pcl_conversions</build_depend>
    <build_depend>pcl_ros</build_depend>
    <build_depend>libpcl-all-dev</build_depend>
    <exec_depend>pcl_conversions</exec_depend>
    <exec_depend>pcl_ros</exec_depend>
    <exec_depend>libpcl-all</exec_depend>


    <export>

    </export>

</package>
